Linking to index page from list

--- a/list.html
+++ b/list.html
@@ -21,12 +21,12 @@
     <div class="body" role="main">
         <div class="container">
             <div class="masthead trim">
-                <h1 class="title">Campaign title</h1>
-                <h4 class="subtitle">Fundraising campaign by Matt Brailsford</h4>
+                <h1 class="heading">Campaign title</h1>
+                <h4 class="subheading">Fundraising campaign by Matt Brailsford</h4>
             </div>
             <div class="columns columns--x1 columns--x2-md columns--x3-lg summary__list">
                 <div class="column">
-                    <a href="#" class="summary trim">
+                    <a href="index.html" class="summary trim">
                         <span class="summary__img">
                             <img src="https://placehold.it/800x400" />
                         </span>
@@ -38,7 +38,7 @@
                     </a>
                 </div>
                 <div class="column">
-                    <a href="#" class="summary trim">
+                    <a href="index.html" class="summary trim">
                         <span class="summary__img">
                             <img src="https://placehold.it/800x400" />
                         </span>
@@ -50,7 +50,7 @@
                     </a>
                 </div>
                 <div class="column">
-                    <a href="#" class="summary trim">
+                    <a href="index.html" class="summary trim">
                         <span class="summary__img">
                             <img src="https://placehold.it/800x400" />
                         </span>
@@ -62,7 +62,7 @@
                     </a>
                 </div>
                 <div class="column">
-                    <a href="#" class="summary trim">
+                    <a href="index.html" class="summary trim">
                         <span class="summary__img">
                             <img src="https://placehold.it/800x400" />
                         </span>
@@ -74,7 +74,7 @@
                     </a>
                 </div>
                 <div class="column">
-                    <a href="#" class="summary trim">
+                    <a href="index.html" class="summary trim">
                         <span class="summary__img">
                             <img src="https://placehold.it/800x400" />
                         </span>
