--- a/index.html
+++ b/index.html
@@ -214,7 +214,36 @@
             </div>
         </div>
     </div>
-    <footer>
+    <footer class="footer--primary">
+        <div class="container">
+            <div class="columns columns--x1 columns--x3-md">
+                <div class="column">
+                    <h3>About</h3>
+                    <nav>
+                        <ul>
+                            <li><a href="text.html">About Us</a></li>
+                            <li><a href="text.html">Contact Us</a></li>
+                        </ul>
+                    </nav>
+                </div>
+                <div class="column">
+                    <h3>Help</h3>
+                    <nav>
+                        <ul>
+                            <li><a href="text.html">FAQs</a></li>
+                            <li><a href="text.html">Terms &amp; Conditions</a></li>
+                            <li><a href="text.html">Privacy Policy</a></li>
+                        </ul>
+                    </nav>
+                </div>
+                <div class="column">
+                    <h3>Outfield Digital</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras odio diam, vulputate viverra sapien vel, sodales volutpat tellus.</p>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <footer class="footer--secondary">
         <div class="container">
             &copy; Copyright 2018 Outfield Digital / All rights reserved
         </div>
