Campaigns link links to list page

--- a/text.html
+++ b/text.html
@@ -37,7 +37,7 @@
                     <h3>Links</h3>
                     <nav>
                         <ul>
-                            <li><a href="text.html">Campaigns</a></li>
+                            <li><a href="list.html">Campaigns</a></li>
                             <li><a href="text.html">About Us</a></li>
                             <li><a href="text.html">Contact Us</a></li>
                         </ul>
