Made progress bar more generic

--- a/list.html
+++ b/list.html
@@ -38,7 +38,7 @@
                         <h4 class="summary__heading">Macaw</h4>
                         <h6 class="summary__subheading">Fundraising campaign</h6>
                         <p class="summary__meta">By Matt Brailsford</p>
-                        <span class="summary__progress"><span></span></span>
+                        <span class="summary__progress progress"><span></span></span>
                         <p class="summary__meta">$2,500 pledged<br />38 backers<br />7 days to go</p>
                     </a>
                 </div>
@@ -50,7 +50,7 @@
                         <h4 class="summary__heading">Macaw</h4>
                         <h6 class="summary__subheading">Fundraising campaign</h6>
                         <p class="summary__meta">By Matt Brailsford</p>
-                        <span class="summary__progress"><span></span></span>
+                        <span class="summary__progress progress"><span></span></span>
                         <p class="summary__meta">$2,500 pledged<br />38 backers<br />7 days to go</p>
                     </a>
                 </div>
@@ -62,7 +62,7 @@
                         <h4 class="summary__heading">Macaw</h4>
                         <h6 class="summary__subheading">Fundraising campaign</h6>
                         <p class="summary__meta">By Matt Brailsford</p>
-                        <span class="summary__progress"><span></span></span>
+                        <span class="summary__progress progress"><span></span></span>
                         <p class="summary__meta">$2,500 pledged<br />38 backers<br />7 days to go</p>
                     </a>
                 </div>
@@ -74,7 +74,7 @@
                         <h4 class="summary__heading">Macaw</h4>
                         <h6 class="summary__subheading">Fundraising campaign</h6>
                         <p class="summary__meta">By Matt Brailsford</p>
-                        <span class="summary__progress"><span></span></span>
+                        <span class="summary__progress progress"><span></span></span>
                         <p class="summary__meta">$2,500 pledged<br />38 backers<br />7 days to go</p>
                     </a>
                 </div>
@@ -86,7 +86,7 @@
                         <h4 class="summary__heading">Macaw</h4>
                         <h6 class="summary__subheading">Fundraising campaign</h6>
                         <p class="summary__meta">By Matt Brailsford</p>
-                        <span class="summary__progress"><span></span></span>
+                        <span class="summary__progress progress"><span></span></span>
                         <p class="summary__meta">$2,500 pledged<br />38 backers<br />7 days to go</p>
                     </a>
                 </div>
