Switch footer to using paragraphs instead of lists for links

--- a/index.html
+++ b/index.html
@@ -219,23 +219,19 @@
             <div class="columns columns--x1 columns--x3-md">
                 <div class="column">
                     <h3>Links</h3>
-                    <nav>
-                        <ul>
-                            <li><a href="list.html">Campaigns</a></li>
-                            <li><a href="text.html">About Us</a></li>
-                            <li><a href="text.html">Contact Us</a></li>
-                        </ul>
-                    </nav>
+                    <p>
+                        <a href="list.html">Campaigns</a><br />
+                        <a href="text.html">About Us</a><br />
+                        <a href="text.html">Contact Us</a>
+                    </p>
                 </div>
                 <div class="column">
                     <h3>Help</h3>
-                    <nav>
-                        <ul>
-                            <li><a href="text.html">FAQs</a></li>
-                            <li><a href="text.html">Terms &amp; Conditions</a></li>
-                            <li><a href="text.html">Privacy Policy</a></li>
-                        </ul>
-                    </nav>
+                    <p>
+                        <a href="list.html">Campaigns</a><br />
+                        <a href="text.html">About Us</a><br />
+                        <a href="text.html">Contact Us</a>
+                    </p>
                 </div>
                 <div class="column">
                     <h3>Outfield Digital</h3>
