--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                                 <div class="media__img">
                                     <img src="https://avatars2.githubusercontent.com/u/527305?s=460&v=4" alt="" class="author__img" />
                                 </div>
-                                <div class="media__body">
+                                <div class="media__bdy">
                                     <h4 class="author__name">Matt Brailsford</h4>
                                     <p class="author__description">Web Developer</p>
                                 </div>
@@ -128,7 +128,7 @@
                             <div class="media__img">
                                 <img src="https://avatars2.githubusercontent.com/u/527305?s=460&v=4" alt="" class="backer__img" />
                             </div>
-                            <div class="media__body trim">
+                            <div class="media__bdy trim">
                                 <h4 class="backer__name">Matt Brailsford</h4>
                                 <h6 class="backer__meta">Pledged £100 3 days ago</h6>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus eleifend at dui sit amet dignissim. Ut laoreet erat ut justo tempus, in gravida arcu bibendum.</p>
@@ -138,7 +138,7 @@
                             <div class="media__img">
                                 <img src="https://avatars2.githubusercontent.com/u/527305?s=460&v=4" alt="" class="backer__img" />
                             </div>
-                            <div class="media__body trim">
+                            <div class="media__bdy trim">
                                 <h4 class="backer__name">Matt Brailsford</h4>
                                 <h6 class="backer__meta">Pledged £100 3 days ago</h6>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus eleifend at dui sit amet dignissim. Ut laoreet erat ut justo tempus, in gravida arcu bibendum.</p>
@@ -148,7 +148,7 @@
                             <div class="media__img">
                                 <img src="https://avatars2.githubusercontent.com/u/527305?s=460&v=4" alt="" class="backer__img" />
                             </div>
-                            <div class="media__body trim">
+                            <div class="media__bdy trim">
                                 <h4 class="backer__name">Matt Brailsford</h4>
                                 <h6 class="backer__meta">Pledged £100 3 days ago</h6>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus eleifend at dui sit amet dignissim. Ut laoreet erat ut justo tempus, in gravida arcu bibendum.</p>
@@ -158,7 +158,7 @@
                             <div class="media__img">
                                 <img src="https://avatars2.githubusercontent.com/u/527305?s=460&v=4" alt="" class="backer__img" />
                             </div>
-                            <div class="media__body trim">
+                            <div class="media__bdy trim">
                                 <h4 class="backer__name">Matt Brailsford</h4>
                                 <h6 class="backer__meta">Pledged £100 3 days ago</h6>
                                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus eleifend at dui sit amet dignissim. Ut laoreet erat ut justo tempus, in gravida arcu bibendum.</p>
@@ -188,7 +188,7 @@
                         <div class="media__img">
                             <img src="https://avatars2.githubusercontent.com/u/527305?s=460&v=4" alt="" class="author__img" />
                         </div>
-                        <div class="media__body">
+                        <div class="media__bdy">
                             <h4 class="author__name">Matt Brailsford</h4>
                             <p class="author__description">Web Developer</p>
                         </div>
@@ -254,11 +254,11 @@
                     <div class="columns columns--x1 columns--x2-md">
                         <div class="column">
                             <div class="form__field">
-                                <label for="name">Name</label>
+                                <label for="name">Name *</label>
                                 <input type="text" name="name" required />
                             </div>
                             <div class="form__field">
-                                <label for="email">Email</label>
+                                <label for="email">Email *</label>
                                 <input type="email" name="email" required />
                             </div>
                         </div>
@@ -273,17 +273,53 @@
                                 </select>
                             </div>
                             <div class="form__field">
-                                <label for="amount">Amount</label>
+                                <label for="amount">Amount *</label>
                                 <input type="number" name="amount" required />
                             </div>                          
                         </div>
                     </div>
                     <div class="form__field">
-                        <label for="name">Message</label>
+                        <label for="name">Message<br /><small>Leave a message to display in the backers section</small></label>
                         <textarea></textarea>
                     </div>
-                    <div class="form__field">
-                        <label><span class="switch"><input type="checkbox" /><span class="switch__slider"></span></span> Remain Anonymous</label>
+                    <div class="columns columns--x1 columns--x2-md">
+                        <div class="column">
+                            <div class="form__field">
+                                <label class="media">
+                                    <span class="media__img">
+                                        <span class="switch"><input type="checkbox" /><span class="switch__slider"></span></span>
+                                    </span>
+                                    <span class="media__bdy">
+                                        Remain Anonymous<br />
+                                        <small>Don't show your name or gravatar in the backers section.</small>
+                                    </span>
+                                </label>
+                            </div>
+                            <div class="form__field">
+                                <label class="media">
+                                    <span class="media__img">
+                                        <span class="switch"><input type="checkbox" name="receiveNotifications" checked="checked" /><span class="switch__slider"></span></span>
+                                    </span>
+                                    <span class="media__bdy">
+                                        Join Newsletter<br />
+                                        <small>Receive emails about other campaigns and news from Outfield Digital.</small>
+                                    </span>
+                                </label>
+                            </div>
+                        </div>
+                        <div class="column">
+                            <div class="form__field">
+                                <label class="media">
+                                    <span class="media__img">
+                                        <span class="switch"><input type="checkbox" name="joinNewsletter" checked="checked" /><span class="switch__slider"></span></span>
+                                    </span>
+                                    <span class="media__bdy">
+                                        Recieve Notifications<br />
+                                        <small>Receive updates about this campaign via email.</small>
+                                    </span>
+                                </label>
+                            </div>                          
+                        </div>
                     </div>
                 </fieldset>
                 <fieldset>
@@ -292,19 +328,19 @@
                     <div class="columns columns--x1 columns--x2-md">
                         <div class="column">
                             <div class="form__field">
-                                <label for="name">Card Number</label>
+                                <label for="name">Card Number *</label>
                                 <input type="text" />
                             </div>
                             <div class="columns  columns--x2">
                                 <div class="column">
                                     <div class="form__field">
-                                        <label for="name">Expiry Date</label>
+                                        <label for="name">Expiry Date *</label>
                                         <input type="text" placeholder="MM/YY" />
                                     </div>
                                 </div>
                                 <div class="column">
                                     <div class="form__field">
-                                        <label for="name">CVC</label>
+                                        <label for="name">CVC *</label>
                                         <input type="text" />
                                     </div>
                                 </div>
@@ -312,18 +348,27 @@
                         </div>
                         <div class="column">
                             <div class="form__field">
-                                <label for="name">Country</label>
+                                <label for="name">Country *</label>
                                 <select>
                                     <option>United Kingdom</option>
                                     <option>£100</option>
                                 </select>
                             </div>    
                             <div class="form__field">
-                                <label for="name">Postal Code</label>
+                                <label for="name">Postal Code *</label>
                                 <input type="text" />
                             </div>                        
                         </div>
                     </div>
+                    <label class="media">
+                        <span class="media__img">
+                            <span class="switch"><input type="checkbox" name="agreeToTerms" required /><span class="switch__slider"></span></span>
+                        </span>
+                        <span class="media__bdy">
+                            Agree to Terms &amp; Conditions *<br />
+                            <small>I confirm that I have read and agree to the <a href="#">Terms &amp; Conditions</a></small>
+                        </span>
+                    </label>
                 </fieldset>
                 <div class="modal__btns">
                     <button class="btn modal__cancel">Cancel</button>
