--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
                         </div>
                         <div class="column">
                             <div class="form__field">
-                                <label for="name">Reward</label>
+                                <label for="name">Reward *</label>
                                 <select name="reward">
                                     <option value="" data-amount="1">No reward, just donate</option>
                                     <option value="RWD-100" data-amount="100">£100</option>
@@ -315,7 +315,7 @@
                                     </span>
                                     <span class="media__bdy">
                                         Recieve Notifications<br />
-                                        <small>Receive updates about this campaign via email.</small>
+                                        <small>Receive email notifications about updates to this campaign.</small>
                                     </span>
                                 </label>
                             </div>                          
